build out home page and about page features

--- a/app/views/static_page/Home.html.erb
+++ b/app/views/static_page/Home.html.erb
@@ -12,19 +12,19 @@
 	<div class="row top-padding">
 		<div class="col-sm-4 text-center right-border">
 			<h3>View Our Plans</h3>
-			<p>Take a look through our current plans<br/> and find one with all the amenities <br/>you have ever wanted.</p>
+			<p>Take a look through our current plans and find one with all the amenities you have ever wanted.</p>
 		<button type="button" class="btn btn-primary btn-lg">PLANS</button>
 		</div>
 
 		<div class="col-sm-4 text-center right-border">
 			<h3>Communities</h3>
-			<p>Looking for a great place to settle down, <br/>that is close to everything? Check out our building communities here.</p>
+			<p>Looking for a great place to settle down, that is close to everything? Check out our building communities here.</p>
 		<button type="button" class="btn btn-primary btn-lg">COMMUNITIES</button>
 		</div>
 
 		<div class="col-sm-4 text-center">
 			<h3>About Us</h3>
-			<p>Questions, Comments, or Concerns? <br/> Find out why Mike Klauck Construction <br/> is what you've been looking for.</p>
+			<p>Questions, Comments, or Concerns? Find out why Mike Klauck Construction is what you've been looking for.</p>
 		<!-- <button type="button" class="btn btn-primary">ABOUT</button> -->
 			<%= link_to 'ABOUT', about_path, class: "btn btn-primary btn-lg" %>
 		</div>
